--- a/_data/share.yml
+++ b/_data/share.yml
@@ -1,4 +1,4 @@
 platforms:
   - type: Telegram
     icon: "fab fa-telegram"
-    link: "https://t.me/share/url?url=URL&text=TITLE"
+    link: "https://t.me/share/url?url=URL&text=URL"
