--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tagline: Docs and Guides for the Telegram-bot
 
 description: >- # used by seo meta and the atom feed
   Its really docs!
-url: ""
+url: "https://mysettlement.github.io"
 
 github:
   username: mysettlement
